<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2024 by Laza Medical.
    All Rights Reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>heartbeat_diagnostics</name>
  <version>0.0.0</version>
  <description>Diagnostic aggregator,configuration, and launch files for sw_watchdog</description>
  <maintainer email="matus@lazamedical.com">Matus</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
