<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
    Copyright (c) 2024 by Laza Medical.
    All Rights Reserved.
-->
<package format="3">
  <name>sw_watchdog_test</name>
  <version>0.1.0</version>
  <description>Library of software watchdogs integration tests</description>
  <maintainer email="matus@lazamedical.com">Matus Konkol</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sw_watchdog</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <!--<exec_depend>rosidl_default_runtime</exec_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
